Import the style (main.css) to the file index.html and customize a task list template that contains a field and a button to add

--- a/index.html
+++ b/index.html
@@ -4,7 +4,22 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>TodoList</title>
+    <link rel="stylesheet" href="style/main.css">
   </head>
  <body>
+ 	 <div class="container">
+        <div class="row justify-content-center" style="margin-top:100px">
+            <div class="col-md-6">
+                <div class="input-group">
+                    <input type="text"  class="form-control" placeholder="Enter new task">
+                    <div class="input-group-append">
+                        <button class="btn btn-success">
+                            + Add
+                        </button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
