Add the function with the name (addNewTask) to display the todo list order by latest

--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
                     </div>
                 </div>
                  <span id="errMessage" class="text-danger"></span>
+                  <div class="mt-4">
+                    <ul class="list-group" id="todoList">
+                    </ul>
+                </div>
             </div>
         </div>
     </div>
